--- a/about.html
+++ b/about.html
@@ -3,8 +3,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="ekvira cake shop">
+  	<meta name="keywords" content="ekvira cake shop">
+  	<meta name="author" content="ekvira cake shop">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>aai ekvira cake shop</title>
+	<title>Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -13,7 +16,7 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt="ekvira cake shop"></a>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Home</a>
@@ -37,36 +40,36 @@
 				</div>
 			</div>
 			<div class="body ab">
-				<img src="images/OE_Banner_2.1.jpg" alt="">
+				<img src="images/OE_Banner_2.1.jpg" alt="ekvira cake shop">
 			</div>
 			<div class="footer">
 				<div class="sidebar">
-					<h1 style="line-height: 27px;padding: 0 0 20px;">BEST HOMEMADE CAKES IN CHAUGOAN</h1>
+					<h1 style="line-height: 27px;padding: 0 0 20px;">BEST HOMEMADE CAKES 🎂 IN CHAUGOAN</h1>
 					<p style="line-height: 20px;">"We provide one of the best homemade cakes baked by conventional methods thus giving the cake it's true essence, yet with a unique touch and utmost care by following food safety guidelines. Birthday- egg and eggless - cakes, Plum rich with dry fruit cakes with or without alcohol also available by order. Orders has to be placed 2 days in prior. We also provide free delivery services."</p>
 				</div>
 				<div class="article">
-					<h1>We Have Provide Best Home Made Cakes</h1>
+					<center><h1>We Have Provide Best Home Made Cakes🎂</h1></center>
 					<ul>
 					<li>
-						<img src="images/nitin.jpeg" alt="">
+						<img src="images/nitin.jpeg" alt="ekvira cake shop">
 						<h2>Nitin Patil</h2>
-						<center><p>The journey of a thousand miles begins with one step.</p></center>
+						<center><p>I will win, not immediately but definitely🌱</p></center>
 					</li>
 					
 					<li>
-						<img src="images/varsha.jpeg" alt="">
+						<img src="images/varsha.jpeg" alt="ekvira cake shop">
 						<h2>Varsha Patil</h2>
-						<center><p>The journey of a thousand miles begins with one step.</p></center>
+						<center><p>The journey of a thousand miles begins with one step.🌱</p></center>
 					</li>
 					<li>
-						<img src="images/shivaji.jpeg" alt="">
+						<img src="images/shivaji.jpeg" alt="ekvira cake shop">
 						<h2>Shivaji Patil</h2>
-						<center><p>The journey of a thousand miles begins with one step.</p></center>
+						<center><p>Your limitation—it’s only your imagination.🌱</p></center>
 					</li>
 					<li>
-						<img src="images/shivaji.jpeg" alt="">
+						<img src="images/ashvini.jpeg" alt="ekvira cake shop">
 						<h2>Ashvini Patil</h2>
-						<center><p>The journey of a thousand miles begins with one step.</p></center>
+						<center><p>Little things make big days.🌱</p></center>
 					</li>
 				</ul>
 				</div>
