--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="ekvira cake shop">
+  	<meta name="keywords" content="ekvira cake shop">
+  	<meta name="author" content="ekvira cake shop">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>aai ekvira cake shop</title>
+	<title>Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -13,7 +16,7 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt="ekvira cake shop"></a>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Home</a>
@@ -39,7 +42,7 @@
 			<div class="body">
 				<div>
 					<div>
-						<img src="images/check-in.png" alt="">
+						<img src="images/check-in.png" alt="ekvira cake shop">
 						<h1>Chaugoan Kh.</h1>
 						<p>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
 						<p>Mobile No. & Whatsapp No. +91 9763738330, +91 7387863187, +91 8080261516
