--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="ekvira cake shop">
+  	<meta name="keywords" content="ekvira cake shop">
+  	<meta name="author" content="ekvira cake shop">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>aai ekvira cake shop</title>
+	<title>Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -30,7 +33,7 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt="ekvira cake shop"></a>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Home</a>
@@ -54,30 +57,30 @@
 				</div>
 			</div>
 			<div class="body">
-				<img src="images/OE_Banner_2.1.jpg" alt="">
+				<img src="images/OE_Banner_2.1.jpg" alt="ekvira cake shop">
 			</div>
 			<div>
 				<ul>
 					<li>
-						<img src="images/pinaaple-cake1.jpg" alt="">
+						<img src="images/pinaaple-cake1.jpg" alt="ekvira cake shop">
 						<h2>Pinaaple Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/chocalate-cake.jpg" alt="">
+						<img src="images/chocalate-cake.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 350</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/butter-scoch.jpg" alt="">
+						<img src="images/butter-scoch.jpg" alt="ekvira cake shop">
 						<h2>Butter Scoch</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/photo-cake.jpg" alt="">
+						<img src="images/photo-cake.jpg" alt="ekvira cake shop">
 						<h2>Photo Cake</h2>
 						<center><strong>Rs. 800</strong><center>
 						<a href="order.html" class="more">Order Now</a>
@@ -85,25 +88,25 @@
 				</ul>
 				<ul>
 					<li>
-						<img src="images/black-forest-cake.jpg" alt="">
+						<img src="images/black-forest-cake.jpg" alt="ekvira cake shop">
 						<h2>Black Forest Cake</h2>
 						<center><strong>Rs. 350</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/white-forest-cake.jpg" alt="">
+						<img src="images/white-forest-cake.jpg" alt="ekvira cake shop">
 						<h2>White Forest Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/doll-cake.jpg" alt="">
+						<img src="images/doll-cake.jpg" alt="ekvira cake shop">
 						<h2>Doll Cake</h2>
 						<center><strong>Rs. 800</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/vanilla.jpg" alt="">
+						<img src="images/vanilla.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
@@ -111,25 +114,25 @@
 				</ul>
 				<ul>
 					<li>
-						<img src="images/stoberry-cake.jpg" alt="">
+						<img src="images/stoberry-cake.jpg" alt="ekvira cake shop">
 						<h2>Stoberry Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake3.jpg" alt="">
+						<img src="images/cake3.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake4.jpg" alt="">
+						<img src="images/cake4.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake5.jpg" alt="">
+						<img src="images/cake5.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
@@ -137,25 +140,25 @@
 				</ul>
 				<ul>
 					<li>
-						<img src="images/cake6.jpg" alt="">
+						<img src="images/cake6.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake7.jpg" alt="">
+						<img src="images/cake7.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake8.jpg" alt="">
+						<img src="images/cake8.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake9.jpg" alt="">
+						<img src="images/cake9.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
@@ -163,25 +166,25 @@
 				</ul>
 				<ul>
 					<li>
-						<img src="images/cake1.jpg" alt="">
+						<img src="images/cake1.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake10.jpg" alt="">
+						<img src="images/cake10.jpg" alt="ekvira cake shop">
 						<h2>Two Tier Cake</h2>
 						<center><strong>Rs. 650</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake11.jpg" alt="">
+						<img src="images/cake11.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake12.jpg" alt="">
+						<img src="images/cake12.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
@@ -189,25 +192,25 @@
 				</ul>
 				<ul>
 					<li>
-						<img src="images/cake13.jpg" alt="">
+						<img src="images/cake13.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake14.jpg" alt="">
+						<img src="images/cake14.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake15.jpg" alt="">
+						<img src="images/cake15.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake16.jpg" alt="">
+						<img src="images/cake16.jpg" alt="ekvira cake shop">
 						<h2>Photo Cake</h2>
 						<center><strong>Rs. 800</strong><center>
 						<a href="order.html" class="more">Order Now</a>
@@ -215,25 +218,25 @@
 				</ul>
 				<ul>
 					<li>
-						<img src="images/cake17.jpg" alt="">
+						<img src="images/cake17.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake18.jpg" alt="">
+						<img src="images/cake18.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake19.jpg" alt="">
+						<img src="images/cake19.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
 						<a href="order.html" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/cake20.jpg" alt="">
+						<img src="images/cake20.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
 						<a href="order.html" class="more">Order Now</a>
