--- a/order.html
+++ b/order.html
@@ -3,8 +3,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="description" content="ekvira cake shop">
+  	<meta name="keywords" content="ekvira cake shop">
+  	<meta name="author" content="ekvira cake shop">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>aai ekvira cake shop</title>
+	<title>Ekvira Cake Shop</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
 	<script src="js/mobile.js" type="text/javascript"></script>
@@ -13,7 +16,7 @@
 	<div id="page">
 		<div id="header">
 			<div>
-				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt=""></a>
+				<a href="index.html" class="logo"><img src="images/hqdefault.jpg" alt="ekvira cake shop"></a>
 				<ul id="navigation">
 					<li>
 						<a href="index.html">Home</a>
@@ -40,39 +43,39 @@
 				<div class="featured">
 					<ul>
 						<li>
-							<img src="images/satilal.jpeg" alt="">
+							<img src="images/satilal.jpeg" alt="ekvira cake shop">
 							<div>
 								<h1>Satilal Patil</h1>
 								<br>
-								<p>Mobile No.- +91 9763738330<br>Whatsapp No.- +91 9763738330<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
-								<a href="https://api.whatsapp.com/send?phone=+919763738330&text=Hi" class="more">Send Message</a>
+								<p>Mobile No.- +91 9763738330<br>Whatsapp No.- +91 9763738330<br>At. Chaugoan Kh Post Jogshelu<br> Tel. Shindkheda Dist. Dhule<br> Maharashtra-425406</p>
+								<a href="https://api.whatsapp.com/send?phone=+919763738330&text=Hi" class="more">Send Message 💬</a>
 							</div>
 						</li>
 						
 						<li>
-							<img src="images/nitin.jpeg" alt="">
+							<img src="images/nitin.jpeg" alt="ekvira cake shop">
 							<div>
 								<h1>Nitin Patil</h1>
 								<br>
-								<p>Mobile No.- +91 7387863187<br>Whatsapp No.- +91 7387863187<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
-								<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Send Message</a>
+								<p>Mobile No.- +91 7387863187<br>Whatsapp No.- +91 7387863187<br>At. Chaugoan Kh Post Jogshelu <br>Tel. Shindkheda Dist. Dhule <br>Maharashtra-425406</p>
+								<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Send Message 💬</a>
 							</div>
 						</li>
 						
 						<li>
-							<img src="images/shivaji.jpeg" alt="">
+							<img src="images/shivaji.jpeg" alt="ekvira cake shop">
 							<div>
 								<h1>Shivaji Patil</h1>
 								<br>
-								<p>Mobile No.- +91 8080261516<br>Whatsapp No.- +91 8080261516<br>At. Chaugoan Kh Post Jogshelu Tel. Shindkheda Dist. Dhule Maharashtra-425406</p>
-								<a href="https://api.whatsapp.com/send?phone=+918080261516&text=Hi" class="more">Send Message</a>
+								<p>Mobile No.- +91 8080261516<br>Whatsapp No.- +91 8080261516<br>At. Chaugoan Kh Post Jogshelu<br> Tel. Shindkheda Dist. Dhule<br> Maharashtra-425406</p>
+								<a href="https://api.whatsapp.com/send?phone=+918080261516&text=Hi" class="more">Send Message 💬</a>
 							</div>
 						</li>
 					</ul>
 				</div>
 				<div class="sidebar">
 					<h1>Pinaaple Cake</h1>
-					<img src="images/pinaaple-cake.jpg" alt="">
+					<img src="images/pinaaple-cake.jpg" alt="ekvira cake shop">
 					<h2>BEST HOMEMADE CAKES IN CHAUGOAN</h2>
 					<br>
 					<p>"We provide one of the best homemade cakes baked by conventional methods thus giving the cake it's true essence, yet with a unique touch and utmost care by following food safety guidelines. Birthday- egg and eggless - cakes, Plum rich with dry fruit cakes with or without alcohol also available by order. Orders has to be placed 2 days in prior. We also provide free delivery services."</p>
