--- a/index.html
+++ b/index.html
@@ -66,25 +66,25 @@
 						<img src="images/pinaaple-cake1.jpg" alt="ekvira cake shop">
 						<h2>Pinaaple Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/chocalate-cake.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 350</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/butter-scoch.jpg" alt="ekvira cake shop">
 						<h2>Butter Scoch</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/photo-cake.jpg" alt="ekvira cake shop">
 						<h2>Photo Cake</h2>
 						<center><strong>Rs. 800</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
@@ -92,25 +92,25 @@
 						<img src="images/black-forest-cake.jpg" alt="ekvira cake shop">
 						<h2>Black Forest Cake</h2>
 						<center><strong>Rs. 350</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/white-forest-cake.jpg" alt="ekvira cake shop">
 						<h2>White Forest Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/doll-cake.jpg" alt="ekvira cake shop">
 						<h2>Doll Cake</h2>
 						<center><strong>Rs. 800</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/vanilla.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
@@ -118,25 +118,25 @@
 						<img src="images/stoberry-cake.jpg" alt="ekvira cake shop">
 						<h2>Stoberry Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake3.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake4.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake5.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
@@ -144,25 +144,25 @@
 						<img src="images/cake6.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake7.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake8.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake9.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
@@ -170,25 +170,25 @@
 						<img src="images/cake1.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake10.jpg" alt="ekvira cake shop">
 						<h2>Two Tier Cake</h2>
 						<center><strong>Rs. 650</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake11.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake12.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
@@ -196,25 +196,25 @@
 						<img src="images/cake13.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake14.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake15.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake16.jpg" alt="ekvira cake shop">
 						<h2>Photo Cake</h2>
 						<center><strong>Rs. 800</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
@@ -222,25 +222,25 @@
 						<img src="images/cake17.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake18.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake19.jpg" alt="ekvira cake shop">
 						<h2>Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake20.jpg" alt="ekvira cake shop">
 						<h2>Chocalate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="order.html" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
 					</li>
 				</ul>
 			</div>
