--- a/index.html
+++ b/index.html
@@ -64,183 +64,183 @@
 				<ul>
 					<li>
 						<img src="images/pinaaple-cake1.jpg" alt="ekvira cake shop">
-						<h2>Pinaaple Cake</h2>
+						<h2>1. Pinaaple Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 1. Pinaaple Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
-						<img src="images/chocalate-cake.jpg" alt="ekvira cake shop">
-						<h2>Chocalate Cake</h2>
+						<img src="images/Chocalate-cake.jpg" alt="ekvira cake shop">
+						<h2>2. Chocolate Cake</h2>
 						<center><strong>Rs. 350</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 2. Chocolate Cake 🎂 Rs.350" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/butter-scoch.jpg" alt="ekvira cake shop">
-						<h2>Butter Scoch</h2>
+						<h2>3. Butter Scoch</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 3. Butter Scoch 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/photo-cake.jpg" alt="ekvira cake shop">
-						<h2>Photo Cake</h2>
+						<h2>4. Photo Cake</h2>
 						<center><strong>Rs. 800</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 4. Photo Cake 🎂 Rs.800" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
 					<li>
 						<img src="images/black-forest-cake.jpg" alt="ekvira cake shop">
-						<h2>Black Forest Cake</h2>
+						<h2>5. Black Forest Cake</h2>
 						<center><strong>Rs. 350</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 5. Black Forest Cake 🎂 Rs.350" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/white-forest-cake.jpg" alt="ekvira cake shop">
-						<h2>White Forest Cake</h2>
+						<h2>6. White Forest Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 6. White Forest Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/doll-cake.jpg" alt="ekvira cake shop">
-						<h2>Doll Cake</h2>
+						<h2>7. Doll Cake</h2>
 						<center><strong>Rs. 800</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 7. Doll Cake 🎂 Rs.800" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/vanilla.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>8. Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 8. Vanilla Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
 					<li>
 						<img src="images/stoberry-cake.jpg" alt="ekvira cake shop">
-						<h2>Stoberry Cake</h2>
+						<h2>9. Stoberry Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 9. Stoberry Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake3.jpg" alt="ekvira cake shop">
-						<h2>Chocalate Cake</h2>
+						<h2>10. Chocolate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 10. Chocolate Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake4.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>11. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 11. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake5.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>12. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 12. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
 					<li>
 						<img src="images/cake6.jpg" alt="ekvira cake shop">
-						<h2>Chocalate Cake</h2>
+						<h2>13. Chocolate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 13. Chocolate Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake7.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>14. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 14. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake8.jpg" alt="ekvira cake shop">
-						<h2>Chocalate Cake</h2>
+						<h2>15. Chocolate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 15. Chocolate Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake9.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>16. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 16. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
 					<li>
 						<img src="images/cake1.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>17. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 17. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake10.jpg" alt="ekvira cake shop">
-						<h2>Two Tier Cake</h2>
+						<h2>18. Two Tier Cake</h2>
 						<center><strong>Rs. 650</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 18. Two Tier Cake 🎂 Rs.650" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake11.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>19. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 19. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake12.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>20. Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 20. Vanilla Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
 					<li>
 						<img src="images/cake13.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>21. Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 21. Vanilla Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake14.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>22. Vanilla Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 22. Vanilla Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake15.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>23. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 23. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake16.jpg" alt="ekvira cake shop">
-						<h2>Photo Cake</h2>
+						<h2>24. Photo Cake</h2>
 						<center><strong>Rs. 800</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 24. Photo Cake 🎂 Rs.800" class="more">Order Now</a>
 					</li>
 				</ul>
 				<ul>
 					<li>
 						<img src="images/cake17.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>25. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 25. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake18.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>26. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 26. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake19.jpg" alt="ekvira cake shop">
-						<h2>Vanilla Cake</h2>
+						<h2>27. Vanilla Cake</h2>
 						<center><strong>Rs. 250</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 27. Vanilla Cake 🎂 Rs.250" class="more">Order Now</a>
 					</li>
 					<li>
 						<img src="images/cake20.jpg" alt="ekvira cake shop">
-						<h2>Chocalate Cake</h2>
+						<h2>28. Chocolate Cake</h2>
 						<center><strong>Rs. 300</strong><center>
-						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi" class="more">Order Now</a>
+						<a href="https://api.whatsapp.com/send?phone=+917387863187&text=Hi, Order 28. Chocolate Cake 🎂 Rs.300" class="more">Order Now</a>
 					</li>
 				</ul>
 			</div>
